<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/btn_playlist"
        android:icon="@drawable/baseline_playlist_add_24"
        android:contentDescription="@string/content_list"
        app:showAsAction="ifRoom"
        android:title="@string/topbar_setLists"/>
    <item android:id="@+id/btn_share"
        android:title="@string/topbar_share"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/content_share"
        android:icon="@drawable/baseline_share_24"
        />
    <item android:id="@+id/btn_more"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_more_vert_24"
        android:contentDescription="@string/content_more"
        android:title="@string/topbar_more"/>

</menu>