<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:id="@+id/feedback_container"
    tools:context=".fragments.FeedbackFragment">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_but"
        android:layout_marginTop="7dp"
        android:id="@+id/backButFeedback" />
    <TextView
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:text="@string/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="24sp"
        android:textSize="20sp"
        android:text="@string/how_do"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_marginVertical="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginTop="12sp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:textSize="20sp"
        android:layout_marginTop="26sp"
        android:textColor="@color/white"
        android:text="@string/care_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_layout"
        android:layout_marginVertical="14sp"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <EditText
            android:id="@+id/feedback_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:inputType="text|textMultiLine"
            android:scrollHorizontally="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_marginTop="12sp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendFbButton"
        android:layout_marginTop="26sp"
        android:text="@string/publish_feedback"
        android:backgroundTint="@color/gradient_1"
        android:textStyle="bold"
        android:textColor="@color/gradient_text"
        android:textAllCaps="true"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>