<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/des_back">
    <ImageView
        android:id="@+id/img"
        android:src="@drawable/icon_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/appName"
        android:textAllCaps="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginVertical="10dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingSplash">
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                app:indicatorColor="@color/white"
                android:id="@+id/progress_circular"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/usage"
                android:textAllCaps="true"
                android:text="@string/usage"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/versionUpdateSplash"
            android:visibility="gone">
            <TextView
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/version_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingHorizontal="90dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/textField"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:id="@+id/update_btn"
                android:src="@drawable/update_btn"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorSplash"
            android:visibility="gone">
            <TextView
                android:textColor="@color/white"
                android:textSize="19sp"
                android:text="@string/splash_err"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingHorizontal="90dp"/>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>