<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:id="@+id/mainLayoutForgot">

    <LinearLayout
        android:background="@drawable/main_background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/logIn"
            android:layout_width="320dp"
            android:textSize="40dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:gravity="center"
            tools:layout_editor_absoluteX="-9dp"
            tools:layout_editor_absoluteY="64dp"
            android:layout_height="wrap_content"
            android:text="@string/Forgot" />
        <TextView
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="14dp"
            android:textSize="16sp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:text="@string/reset_pwd_guide"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_reset_layout"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            app:boxStrokeErrorColor="@color/red"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:startIconTint="@color/white"
            app:endIconMode="custom"
            android:hint="@string/email"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/selector_text_input_layout_color"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:startIconDrawable="@drawable/baseline_person_24"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reset"
                android:inputType="textVisiblePassword"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btnSendPwd"
            android:src="@drawable/send_pwd"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:id="@+id/native_container"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>