<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"
    android:paddingTop="10dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/help_but"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="7dp"
        android:id="@+id/helpButHome"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/properties_but"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:id="@+id/propertiesButHome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_user"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_song_unlock"
                android:gravity="center_horizontal"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:layout_marginVertical="30dp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/premium_but"
                android:id="@+id/premiumBut"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="#868686"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_song"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/recyclerViewTrending"
                    android:scrollbars="horizontal"
                    android:fadeScrollbars="false"
                    android:paddingHorizontal="10dp"/>
                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:indicatorColor="#BDFF00"
                    android:id="@+id/progressBarTrending"
                    android:indeterminate="true"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Internet Connection"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"
                    android:textSize="20sp"
                    android:id="@+id/noInternetTrending"
                    android:visibility="gone"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="#868686"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/historyLayout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:id="@+id/recycleViewHistory"
                android:scrollbars="horizontal"
                android:fadeScrollbars="false"
                android:paddingHorizontal="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>