<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayoutSignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/main_background"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_back"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="3"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/logIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="2"

                    android:gravity="right"
                    android:text="@string/signUp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="-9dp"
                    tools:layout_editor_absoluteY="64dp" />

                <ImageView
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/icon_splash"
                    android:paddingVertical="10dp"
                    android:scaleType="fitStart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layoutSU"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            app:boxStrokeErrorColor="@color/red"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            app:startIconTint="@color/white"
            app:endIconMode="custom"
            android:hint="@string/email"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/selector_text_input_layout_color"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:startIconDrawable="@drawable/baseline_person_24"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_emailSu"
                android:inputType="textVisiblePassword"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwd_layoutSU"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            app:boxStrokeErrorColor="@color/red"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            app:startIconTint="@color/white"
            app:endIconMode="password_toggle"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxBackgroundMode="outline"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/selector_text_input_layout_color"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:startIconDrawable="@drawable/baseline_lock_24"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_pwdSu"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repwd_layout"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            app:boxStrokeErrorColor="@color/red"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            app:startIconTint="@color/white"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxBackgroundMode="outline"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/selector_text_input_layout_color"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:startIconDrawable="@drawable/baseline_shield_24"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tf_rePwd"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btnSignUp"
            android:src="@drawable/sign_up_btn"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:text="Already Have Account?"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/backLogIn"
                android:text="@string/logIn"
                android:textColor="#0866FF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:id="@+id/native_container"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>